--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kintone-plugin-template",
-  "version": "1.0.0",
+  "name": "kintone-plugin-scheduler",
+  "version": "0.1.0",
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
@@ -21,6 +21,12 @@
   },
   "devDependencies": {
     "@emotion/styled": "11.9.3",
+    "@fullcalendar/bootstrap5": "^5.11.0",
+    "@fullcalendar/core": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@kintone/dts-gen": "6.1.4",
     "@kintone/plugin-packer": "6.0.5",
     "@kintone/plugin-uploader": "7.0.1",
@@ -35,6 +41,7 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
+    "css-loader": "^6.7.1",
     "dotenv": "16.0.1",
     "esbuild-loader": "2.19.0",
     "eslint": "8.20.0",
@@ -47,6 +54,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
     "recoil": "0.7.4",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "5.3.3",
     "ts-node": "10.9.1",
     "typescript": "4.7.4",
