--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@lb-ribbit/kintone-xapp": "^0.2.2",
     "@mui/icons-material": "5.8.4",
     "@mui/material": "5.9.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.2",
     "@types/luxon": "2.3.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
     "css-loader": "^6.7.1",
+    "date-fns": "^2.29.1",
     "dotenv": "16.0.1",
     "esbuild-loader": "2.19.0",
     "eslint": "8.20.0",
