--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@lb-ribbit/kintone-secrets": "^0.1.2",
     "@lb-ribbit/kintone-xapp": "^0.2.2",
     "@mui/icons-material": "5.8.4",
+    "@mui/lab": "^5.0.0-alpha.91",
     "@mui/material": "5.9.0",
     "@mui/x-date-pickers": "^5.0.0-beta.2",
     "@types/luxon": "2.3.2",
