--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "esbuild-loader": "2.19.0",
     "eslint": "8.20.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
+    "hamburger-react": "^2.5.0",
     "immer": "9.0.15",
     "luxon": "3.0.1",
     "notistack": "2.0.5",
