--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.4",
     "@emotion/styled": "11.9.3",
     "@fullcalendar/bootstrap5": "^5.11.0",
     "@fullcalendar/core": "^5.11.0",
