--- a/package.json
+++ b/package.json
@@ -4,67 +4,65 @@
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
-    "create-ppk": "kintone-plugin-packer --out dist/plugin-dev.zip plugin",
-    "move-ppk": "node scripts/move-ppk.ts",
-    "init": "run-s merge-manifest:prod create-ppk move-ppk",
-    "bundle:dev": "webpack --config webpack.dev.js",
-    "bundle:prod": "webpack --config webpack.prod.js",
-    "bundle:watch": "webpack --config webpack.dev.js -w",
-    "merge-manifest:dev": "ts-node scripts/marge-json.ts dev",
-    "merge-manifest:prod": "ts-node scripts/marge-json.ts prod",
-    "develop": "run-s merge-manifest:dev bundle:dev",
-    "build": "run-s  merge-manifest:prod bundle:prod",
-    "watch": "run-s merge-manifest:dev bundle:watch",
-    "upload": "ts-node scripts/upload.ts",
-    "start": "run-p watch upload",
+    "init": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
+    "build": "node scripts/marge-json.mjs prod && kbuild prod plugin --prod-root cdn",
+    "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"yarn:dev:*\"",
+    "dev:build": "kbuild dev plugin",
+    "dev:upload": "node scripts/upload.mjs",
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
   },
   "devDependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "11.9.3",
-    "@fullcalendar/bootstrap5": "^5.11.0",
-    "@fullcalendar/core": "^5.11.0",
-    "@fullcalendar/daygrid": "^5.11.0",
-    "@fullcalendar/interaction": "^5.11.0",
-    "@fullcalendar/react": "^5.11.1",
-    "@fullcalendar/timegrid": "^5.11.0",
-    "@kintone/dts-gen": "6.1.4",
-    "@kintone/plugin-packer": "6.0.5",
-    "@kintone/plugin-uploader": "7.0.1",
-    "@kintone/rest-api-client": "3.1.4",
-    "@kintone/webpack-plugin-kintone-plugin": "6.0.5",
-    "@lb-ribbit/kintone-secrets": "^0.1.2",
-    "@lb-ribbit/kintone-xapp": "^0.2.2",
-    "@mui/icons-material": "5.8.4",
-    "@mui/lab": "^5.0.0-alpha.91",
-    "@mui/material": "5.9.0",
-    "@mui/x-date-pickers": "^5.0.0-beta.2",
-    "@types/luxon": "2.3.2",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.30.6",
-    "@typescript-eslint/parser": "5.30.6",
-    "css-loader": "^6.7.1",
-    "date-fns": "^2.29.1",
-    "dotenv": "16.0.1",
-    "esbuild-loader": "2.19.0",
-    "eslint": "8.20.0",
-    "fork-ts-checker-webpack-plugin": "7.2.13",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@fullcalendar/bootstrap5": "^6.1.8",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "@kintone/dts-gen": "7.0.4",
+    "@kintone/plugin-packer": "7.0.4",
+    "@kintone/plugin-uploader": "8.0.0",
+    "@kintone/rest-api-client": "4.1.0",
+    "@kintone/webpack-plugin-kintone-plugin": "7.0.4",
+    "@konomi-app/kbuild": "^1.5.2",
+    "@konomi-app/kintone-utilities": "^2.12.4",
+    "@konomi-app/kintone-utility-component": "^1.2.0",
+    "@konomi-app/ui-react": "^1.1.1",
+    "@lb-ribbit/kintone-secrets": "^0.3.0",
+    "@lb-ribbit/kintone-xapp": "^0.4.0",
+    "@mui/icons-material": "5.14.3",
+    "@mui/lab": "^5.0.0-alpha.138",
+    "@mui/material": "5.14.3",
+    "@mui/x-date-pickers": "^6.11.0",
+    "@types/luxon": "3.3.1",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "6.3.0",
+    "@typescript-eslint/parser": "6.3.0",
+    "concurrently": "^8.2.0",
+    "css-loader": "^6.8.1",
+    "date-fns": "^2.30.0",
+    "dotenv": "16.3.1",
+    "esbuild-loader": "3.1.0",
+    "eslint": "8.46.0",
+    "fork-ts-checker-webpack-plugin": "8.0.0",
     "hamburger-react": "^2.5.0",
-    "immer": "9.0.15",
-    "luxon": "3.0.1",
-    "notistack": "2.0.5",
+    "immer": "10.0.2",
+    "luxon": "3.3.0",
+    "notistack": "3.0.1",
     "npm-run-all": "4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "3.1.4",
-    "recoil": "0.7.4",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "5.3.3",
+    "react-error-boundary": "4.0.10",
+    "recoil": "0.7.7",
+    "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "5.3.9",
+    "ts-loader": "^9.4.4",
     "ts-node": "10.9.1",
-    "typescript": "4.7.4",
-    "webpack": "5.73.0",
-    "webpack-cli": "4.10.0",
-    "webpack-merge": "5.8.0"
+    "typescript": "5.1.6",
+    "webpack": "5.88.2",
+    "webpack-cli": "5.1.4",
+    "webpack-merge": "5.9.0"
   }
 }
