--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "kintone-plugin-scheduler",
-  "version": "0.2.0",
+  "version": "0.5.0",
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
     "init": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
-    "build": "node scripts/marge-json.mjs prod && kbuild prod plugin --prod-root plugin",
+    "build": "node scripts/marge-json.mjs prod && kbuild prod plugin --prod-root plugin && kintone-plugin-packer --out dist/plugin.zip --ppk dist/private.ppk plugin",
     "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"yarn:dev:*\"",
     "dev:build": "kbuild dev plugin",
     "dev:upload": "node scripts/upload.mjs",
