--- a/package.json
+++ b/package.json
@@ -4,65 +4,72 @@
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
-    "init": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
-    "build": "node scripts/marge-json.mjs prod && kbuild prod plugin --prod-root plugin && kintone-plugin-packer --out dist/plugin.zip --ppk dist/private.ppk plugin",
-    "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"yarn:dev:*\"",
-    "dev:build": "kbuild dev plugin",
+    "init": "node scripts/marge-json.mjs dev && npm run build:html && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
+    "build": "node scripts/marge-json.mjs prod && concurrently \"npm:build:*\" && kintone-plugin-packer --out dist/plugin.zip --ppk dist/private.ppk plugin",
+    "build:html": "html-minifier --minify-css true --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype src/config/config.html -o plugin/config.html",
+    "build:js": "kbuild prod plugin --prod-root plugin",
+    "build:css": "tailwindcss -i ./src/styles/global.css -o ./plugin/config.css -c ./tailwind.config.config.mjs --minify && tailwindcss -i ./src/styles/global.css -o ./plugin/desktop.css -c ./tailwind.config.desktop.mjs --minify",
+    "standalone": "node scripts/marge-json.mjs standalone && concurrently \"npm:build:*\" && kintone-plugin-packer --out dist/plugin-standalone.zip --ppk dist/private.ppk plugin",
+    "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"npm:dev:*\"",
+    "dev:js": "kbuild dev plugin",
+    "dev:css-config": "tailwindcss -i ./src/styles/global.css -o ./dist/dev/config.css -c ./tailwind.config.config.mjs -w",
+    "dev:css-desktop": "tailwindcss -i ./src/styles/global.css -o ./dist/dev/desktop.css -c ./tailwind.config.desktop.mjs -w",
     "dev:upload": "node scripts/upload.mjs",
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "11.11.0",
-    "@fullcalendar/bootstrap5": "^6.1.8",
-    "@fullcalendar/core": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.8",
-    "@fullcalendar/react": "^6.1.8",
-    "@fullcalendar/timegrid": "^6.1.8",
-    "@kintone/dts-gen": "7.0.4",
-    "@kintone/plugin-packer": "7.0.4",
-    "@kintone/plugin-uploader": "8.0.0",
-    "@kintone/rest-api-client": "4.1.0",
-    "@kintone/webpack-plugin-kintone-plugin": "7.0.4",
-    "@konomi-app/kbuild": "^1.5.2",
-    "@konomi-app/kintone-utilities": "^2.12.4",
-    "@konomi-app/kintone-utility-component": "^1.2.0",
+    "@fullcalendar/bootstrap5": "^6.1.9",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
+    "@kintone/dts-gen": "8.0.2",
+    "@kintone/plugin-packer": "8.0.1",
+    "@kintone/plugin-uploader": "9.0.1",
+    "@kintone/rest-api-client": "5.0.3",
+    "@kintone/webpack-plugin-kintone-plugin": "8.0.2",
+    "@konomi-app/kbuild": "^3.0.0",
+    "@konomi-app/kintone-utilities": "^3.7.3",
+    "@konomi-app/kintone-utility-component": "^1.3.1",
     "@konomi-app/ui-react": "^1.1.1",
     "@lb-ribbit/kintone-secrets": "^0.3.0",
     "@lb-ribbit/kintone-xapp": "^0.4.0",
-    "@mui/icons-material": "5.14.3",
-    "@mui/lab": "^5.0.0-alpha.138",
-    "@mui/material": "5.14.3",
-    "@mui/x-date-pickers": "^6.11.0",
-    "@types/luxon": "3.3.1",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "6.3.0",
-    "@typescript-eslint/parser": "6.3.0",
-    "concurrently": "^8.2.0",
+    "@mui/icons-material": "5.14.16",
+    "@mui/lab": "^5.0.0-alpha.152",
+    "@mui/material": "5.14.17",
+    "@mui/x-date-pickers": "^6.18.1",
+    "@types/luxon": "3.3.4",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "date-fns": "^2.30.0",
     "dotenv": "16.3.1",
-    "esbuild-loader": "3.1.0",
-    "eslint": "8.46.0",
-    "fork-ts-checker-webpack-plugin": "8.0.0",
+    "esbuild-loader": "4.0.2",
+    "eslint": "8.53.0",
+    "fork-ts-checker-webpack-plugin": "9.0.2",
     "hamburger-react": "^2.5.0",
-    "immer": "10.0.2",
-    "luxon": "3.3.0",
+    "html-minifier": "^4.0.0",
+    "immer": "10.0.3",
+    "luxon": "3.4.4",
     "notistack": "3.0.1",
     "npm-run-all": "4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "4.0.10",
+    "react-error-boundary": "4.0.11",
     "recoil": "0.7.7",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "5.3.9",
-    "ts-loader": "^9.4.4",
+    "ts-loader": "^9.5.0",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6",
-    "webpack": "5.88.2",
+    "typescript": "5.2.2",
+    "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
-    "webpack-merge": "5.9.0"
+    "webpack-merge": "5.10.0"
   }
 }
