--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-error-boundary": "4.0.11",
     "recoil": "0.7.7",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "terser-webpack-plugin": "5.3.9",
     "ts-loader": "^9.5.0",
     "ts-node": "10.9.1",
