--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev:upload": "node scripts/upload.mjs",
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
   },
-  "devDependencies": {
+  "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "11.11.0",
     "@fullcalendar/bootstrap5": "^6.1.9",
@@ -26,13 +26,9 @@
     "@fullcalendar/interaction": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
     "@fullcalendar/timegrid": "^6.1.9",
-    "@kintone/dts-gen": "8.0.2",
-    "@kintone/plugin-packer": "8.0.1",
-    "@kintone/plugin-uploader": "9.0.1",
     "@kintone/rest-api-client": "5.0.3",
-    "@kintone/webpack-plugin-kintone-plugin": "8.0.2",
-    "@konomi-app/kbuild": "^3.0.0",
     "@konomi-app/kintone-utilities": "^3.7.3",
+    "@konomi-app/kintone-utilities-react": "^1.7.2",
     "@konomi-app/kintone-utility-component": "^1.3.1",
     "@konomi-app/ui-react": "^1.1.1",
     "@lb-ribbit/kintone-secrets": "^0.3.0",
@@ -41,36 +37,31 @@
     "@mui/lab": "^5.0.0-alpha.152",
     "@mui/material": "5.14.17",
     "@mui/x-date-pickers": "^6.18.1",
+    "date-fns": "^2.30.0",
+    "hamburger-react": "^2.5.0",
+    "immer": "10.0.3",
+    "luxon": "3.4.4",
+    "notistack": "3.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.11",
+    "recoil": "0.7.7"
+  },
+  "devDependencies": {
+    "@kintone/dts-gen": "8.0.2",
+    "@kintone/plugin-packer": "8.0.1",
+    "@kintone/plugin-uploader": "9.0.1",
+    "@konomi-app/kbuild": "^3.0.0",
     "@types/luxon": "3.3.4",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
     "concurrently": "^8.2.2",
-    "css-loader": "^6.8.1",
-    "date-fns": "^2.30.0",
     "dotenv": "16.3.1",
-    "esbuild-loader": "4.0.2",
     "eslint": "8.53.0",
-    "fork-ts-checker-webpack-plugin": "9.0.2",
-    "hamburger-react": "^2.5.0",
     "html-minifier": "^4.0.0",
-    "immer": "10.0.3",
-    "luxon": "3.4.4",
-    "notistack": "3.0.1",
-    "npm-run-all": "4.1.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-error-boundary": "4.0.11",
-    "recoil": "0.7.7",
-    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.5",
-    "terser-webpack-plugin": "5.3.9",
-    "ts-loader": "^9.5.0",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "webpack": "5.89.0",
-    "webpack-cli": "5.1.4",
-    "webpack-merge": "5.10.0"
+    "typescript": "5.2.2"
   }
 }
