--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "11.11.0",
     "@fullcalendar/bootstrap5": "^6.1.9",
@@ -41,6 +42,7 @@
     "hamburger-react": "^2.5.0",
     "immer": "10.0.3",
     "luxon": "3.4.4",
+    "nanoid": "^5.0.3",
     "notistack": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
