--- a/package.json
+++ b/package.json
@@ -20,49 +20,49 @@
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "11.11.0",
-    "@fullcalendar/bootstrap5": "^6.1.11",
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
-    "@fullcalendar/timegrid": "^6.1.11",
-    "@kintone/rest-api-client": "5.5.0",
-    "@konomi-app/kintone-utilities": "^5.5.0",
-    "@konomi-app/kintone-utilities-react": "^1.13.1",
-    "@konomi-app/kintone-utility-component": "^1.3.1",
-    "@konomi-app/ui-react": "^1.1.1",
-    "@lb-ribbit/kintone-secrets": "^0.3.0",
-    "@lb-ribbit/kintone-xapp": "^0.4.0",
-    "@mui/icons-material": "5.15.14",
-    "@mui/lab": "^5.0.0-alpha.169",
-    "@mui/material": "5.15.14",
-    "@mui/x-date-pickers": "^7.0.0",
+    "@emotion/styled": "11.11.5",
+    "@fullcalendar/bootstrap5": "^6",
+    "@fullcalendar/core": "^6",
+    "@fullcalendar/daygrid": "^6",
+    "@fullcalendar/interaction": "^6",
+    "@fullcalendar/react": "^6",
+    "@fullcalendar/timegrid": "^6",
+    "@kintone/rest-api-client": "5.5.1",
+    "@konomi-app/kintone-utilities": "*",
+    "@konomi-app/kintone-utilities-react": "*",
+    "@konomi-app/kintone-utility-component": "*",
+    "@konomi-app/ui-react": "*",
+    "@lb-ribbit/kintone-secrets": "*",
+    "@lb-ribbit/kintone-xapp": "*",
+    "@mui/icons-material": "5.15.17",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "5.15.17",
+    "@mui/x-date-pickers": "^7.3.2",
     "hamburger-react": "^2.5.0",
-    "immer": "10.0.4",
+    "immer": "10.1.1",
     "luxon": "3.4.4",
-    "nanoid": "^5.0.6",
+    "nanoid": "^5.0.7",
     "notistack": "3.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-error-boundary": "4.0.13",
     "recoil": "0.7.7"
   },
   "devDependencies": {
-    "@kintone/dts-gen": "8.0.9",
-    "@kintone/plugin-packer": "8.0.4",
-    "@kintone/plugin-uploader": "9.0.4",
-    "@konomi-app/kbuild": "^3.1.2",
+    "@kintone/dts-gen": "8.0.10",
+    "@kintone/plugin-packer": "8.0.6",
+    "@kintone/plugin-uploader": "9.1.0",
+    "@konomi-app/kbuild": "*",
     "@types/luxon": "3.4.2",
-    "@types/react": "18.2.72",
-    "@types/react-dom": "18.2.22",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
     "concurrently": "^8.2.2",
     "dotenv": "16.4.5",
-    "eslint": "8.57.0",
+    "eslint": "^8",
     "html-minifier": "^4.0.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.5"
   }
 }
