--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,13 @@
     "resolveJsonModule": true,
     "jsx": "react",
     "strict": true,
-    "paths": {
-      "@/*": ["./src/*"],
-      "@common/*": ["./src/common/*"],
-      "@type/*": ["./src/types/*"]
-    }
+    "paths": { "@/*": ["./src/*"] }
   },
   "typeRoots": ["src/types", "node_modules/@types"],
   "files": [
     "./node_modules/@kintone/dts-gen/kintone.d.ts",
-    "./node_modules/@lb-ribbit/kintone-secrets/cybozu.d.ts"
+    "./node_modules/@konomi-app/k2/types.d.ts",
+    "./node_modules/@konomi-app/kintone-utilities/cybozu.d.ts"
   ],
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
