--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@kintone/dts-gen": "^8.0.12",
     "@kintone/plugin-uploader": "^9.1.2",
     "@konomi-app/k2": "^1.3.1",
+    "@konomi-app/prettier-config": "^1.1.2",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -52,5 +53,6 @@
     "eslint": "^8.57.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
-  }
+  },
+  "prettier": "@konomi-app/prettier-config"
 }
