--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "@mui/x-date-pickers": "^7.11.1",
     "hamburger-react": "^2.5.1",
     "immer": "^10.1.1",
+    "jotai": "^2.12.1",
+    "jotai-derive": "^0.1.2",
+    "jotai-optics": "^0.4.0",
     "luxon": "^3.4.4",
     "nanoid": "^5.0.7",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
-    "recoil": "~0.7.7"
+    "recoil": "~0.7.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@kintone/dts-gen": "^8.0.12",
