--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^7.11.1",
+    "clsx": "^2.1.1",
     "hamburger-react": "^2.5.1",
     "immer": "^10.1.1",
     "jotai": "^2.12.1",
@@ -42,6 +43,7 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "recoil": "~0.7.7",
+    "tailwind-merge": "^3.0.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
