--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^7.11.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hamburger-react": "^2.5.1",
     "immer": "^10.1.1",
     "jotai": "^2.12.1",
     "jotai-derive": "^0.1.2",
     "jotai-optics": "^0.4.0",
+    "lucide-react": "^0.483.0",
     "luxon": "^3.4.4",
     "nanoid": "^5.0.7",
     "notistack": "^3.0.1",
