--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-error-boundary": "^4.0.13",
     "recoil": "~0.7.7",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
