--- a/package.json
+++ b/package.json
@@ -13,62 +13,63 @@
     "path": false
   },
   "dependencies": {
-    "@emotion/css": "^11.13.0",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@fullcalendar/bootstrap5": "^6.1.15",
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
-    "@kintone/rest-api-client": "^5.5.2",
-    "@konomi-app/kintone-utilities": "^5.6.4",
-    "@konomi-app/kintone-utilities-react": "^1.16.0",
-    "@konomi-app/ui-react": "^1.1.1",
-    "@mui/icons-material": "^5.16.5",
-    "@mui/lab": "^5.0.0-alpha.173",
-    "@mui/material": "^5.16.5",
-    "@mui/x-date-pickers": "^7.11.1",
-    "@radix-ui/react-context-menu": "^2.2.6",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-hover-card": "^1.1.6",
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-toggle": "^1.1.2",
+    "@emotion/css": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fullcalendar/bootstrap5": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@kintone/rest-api-client": "^5.7.3",
+    "@konomi-app/kintone-utilities": "^5.13.0",
+    "@konomi-app/kintone-utilities-react": "^2.1.0",
+    "@konomi-app/ui-react": "^2.0.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/lab": "7.0.0-beta.12",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.3.1",
+    "@radix-ui/react-context-menu": "^2.2.14",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-hover-card": "^1.1.13",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "hamburger-react": "^2.5.1",
+    "hamburger-react": "^2.5.2",
     "immer": "^10.1.1",
-    "jotai": "^2.12.1",
-    "jotai-derive": "^0.1.2",
+    "jotai": "^2.12.4",
+    "jotai-derive": "^0.1.3",
     "jotai-optics": "^0.4.0",
-    "lucide-react": "^0.483.0",
-    "luxon": "^3.4.4",
-    "nanoid": "^5.0.7",
-    "notistack": "^3.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.13",
-    "recoil": "~0.7.7",
-    "tailwind-merge": "^3.0.2",
+    "lucide-react": "^0.511.0",
+    "luxon": "^3.6.1",
+    "nanoid": "^5.1.5",
+    "notistack": "^3.0.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@kintone/dts-gen": "^8.0.12",
-    "@kintone/plugin-uploader": "^9.1.2",
-    "@konomi-app/k2": "^1.3.1",
+    "@kintone/dts-gen": "^8.1.2",
+    "@kintone/plugin-uploader": "^9.1.5",
+    "@konomi-app/k2": "^1.10.0",
     "@konomi-app/prettier-config": "^1.1.2",
-    "@types/luxon": "^3.4.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.15.19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "concurrently": "^9.1.2",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.27.0",
+    "tailwindcss": "^4.1.7",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3"
   },
   "prettier": "@konomi-app/prettier-config"
 }
