--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "@konomi-app/kintone-utilities-react": "^2.1.0",
     "@konomi-app/ui-react": "^2.0.0",
     "@mui/icons-material": "^7.1.0",
-    "@mui/lab": "7.0.0-beta.12",
     "@mui/material": "^7.1.0",
-    "@mui/x-date-pickers": "^8.3.1",
-    "@radix-ui/react-context-menu": "^2.2.14",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-hover-card": "^1.1.13",
-    "@radix-ui/react-scroll-area": "^1.2.8",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.8",
+    "@mui/x-date-pickers": "^8.4.0",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "hamburger-react": "^2.5.2",
     "immer": "^10.1.1",
     "jotai": "^2.12.4",
@@ -53,7 +53,7 @@
     "react-error-boundary": "^6.0.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.4"
+    "zod": "^3.25.23"
   },
   "devDependencies": {
     "@kintone/dts-gen": "^8.1.2",
@@ -61,8 +61,8 @@
     "@konomi-app/k2": "^1.10.0",
     "@konomi-app/prettier-config": "^1.1.2",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^22.15.19",
-    "@types/react": "^19.1.4",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "concurrently": "^9.1.2",
     "dotenv": "^16.5.0",
