--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "init": "plugin init && plugin genkey",
     "build": "plugin build && plugin zip",
     "standalone": "plugin build && plugin zip --env standalone",
-    "dev": "plugin dev"
+    "dev": "plugin dev --cert-dir C:/workspaces/apps/cert"
   },
   "browser": {
     "path": false
@@ -42,7 +42,7 @@
     "hamburger-react": "^2.5.2",
     "immer": "^10.1.1",
     "jotai": "^2.12.5",
-    "jotai-derive": "^0.1.3",
+    "jotai-eager": "^0.2.3",
     "jotai-optics": "^0.4.0",
     "lucide-react": "^0.525.0",
     "luxon": "^3.7.1",
@@ -58,7 +58,7 @@
   "devDependencies": {
     "@kintone/dts-gen": "^8.1.2",
     "@kintone/plugin-uploader": "^9.1.5",
-    "@konomi-app/k2": "^1.10.0",
+    "@konomi-app/k2": "^1.11.1",
     "@konomi-app/prettier-config": "^1.1.2",
     "@types/luxon": "^3.6.2",
     "@types/node": "^24.0.15",
