--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "remark-stringify": "^11.0.0",
+    "remeda": "^2.32.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
